--- a/src/app/clients/edit-client/edit-client.component.html
+++ b/src/app/clients/edit-client/edit-client.component.html
@@ -1,1 +1,5 @@
-<p>edit-client works!</p>
+<app-client-form
+    [client]="client"
+    (clientSubmited)="onSubmitClient($event)"
+>
+</app-client-form>
