--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    box-sizing: border-box;
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+    color: #FFF;
+    font-family: 'Segoe UI';
+}
+
+body {
+    background-color: #121212;
+}
